# rbinfer

./: .gitignore  LICENSE  README.md  pyproject.toml
rbinfer/: __init__.py  _compat.py  _likelihoods.py  bias.py  inference.py  predictive_checks.py  priors.py  simulation.py
scripts/: example 3.1.py  example 4.1.py  fcci_v2.py
